making front_page image align correctly
Oh yeah! I did it! You didn't think it was possible, but I did it!

--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ blockquote{
 .widemargins{
 	margin: auto 135px;
 }
-.home .widemargins img, .widemargins-override{
+.widemargins-override{
 margin: auto -135px;
 }
 .justify{
